--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "la-casa-del-aire",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
+    "i18next": "^23.7.10",
+    "react-helmet-async": "^2.0.5"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.5.0"
   }
 }
