--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "svgo": "svgo -f src/assets/icons -o src/assets/icons"
   },
   "dependencies": {
+    "i18next": "^23.7.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.0",
-    "i18next": "^23.7.10",
-    "react-helmet-async": "^2.0.5"
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
+    "svgo": "^4.0.0",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.5.0"
   }
